k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: diagnostics-deployment
  labels:
    app: diagnostics
spec:
  selector:
    matchLabels:
      app: diagnostics
      role: web
  template:
    metadata:
      labels:
        app: diagnostics
        role: web
    spec:
      containers:
      - image: registry.openculinary.org/reciperadar/diagnostics
        imagePullPolicy: IfNotPresent
        name: diagnostics
        ports:
        - containerPort: 8000
