k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: diagnostics-service
spec:
  selector:
    app: diagnostics
    role: web
  ports:
    - protocol: TCP
      port: 80
