k8s/web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: diagnostics-ingress
spec:
  rules:
  - host: diagnostics
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: diagnostics-service
            port:
              number: 80
